# BatteryInfo

./: .gitignore  CMakeLists.txt  README.md  changelog.md  mod.json
android/: BatteryInfoProvider.java
include/: BatteryInfo.hpp
java/src/main/java/io/github/arcticwoof/batteryinfo/: BatteryInfoProvider.java
src/: BatteryInfo.cpp  BatteryInfo.hpp  main.cpp
src/demo/: DemoLayer.cpp
src/devices/: Android.cpp  Ios.mm  Mac.mm  Windows.cpp
